--- a/pages/products/detail.html
+++ b/pages/products/detail.html
@@ -249,79 +249,94 @@
                 <div class="col-md-6">
                     <h2>Kawai K-300 <small>(Mã SP: K-300-M/PEP)</small></h2>
                     <div class="badge bg-danger mb-2">Giảm 7%</div>
-                    <img src="../../assets/images/products/featured_products/dan-piano-kawai-k300-mau-den-sang-trong.jpg"
-                        alt="Kawai K-300" class="img-fluid">
-                    <div class="image-thumbnails mt-3 d-flex">
-                        <ul class="fs-thumit">
-
-                            <a href="#" class="video_youtube">
-                                <span class="fs-th4">
-                                    <i class="fa-brands fa-youtube"></i>
-                                    <p><strong>Video</strong></p>
-                                </span>
-                            </a>
+                    <div class="row">
+                        <div class="col-12 text-center">
                             <a href="#" class="image-gallery_full">
 
                                 <a href="#" data-bs-toggle="modal" data-bs-target="#slideshowModal"
                                     class="btn btn-prrimary">
                                     <span class="fs-th5">
-                                        <i class="fa-sharp fa-solid fa-images"></i>
-                                        <p>Xem thêm ảnh</p>
-                                    </span>
-                                </a>
-                                <!-- Modal chứa Slideshow -->
-                                <div class="modal fade" id="slideshowModal" tabindex="-1"
-                                    aria-labelledby="slideshowModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog modal-lg">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title" id="slideshowModalLabel">Slideshow</h5>
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                    aria-label="Close"></button>
-                                            </div>
-                                            <div class="modal-body">
-                                                <!-- Slideshow (Carousel) -->
-                                                <div id="carouselExampleControls" class="carousel slide"
-                                                    data-bs-ride="carousel" data-bs-interval="2000">
-                                                    <div class="carousel-inner">
-                                                        <div class="carousel-item active">
-                                                            <img src="https://via.placeholder.com/800x400?text=Image+1"
-                                                                class="d-block w-100" alt="Image 1">
-                                                        </div>
-                                                        <div class="carousel-item">
-                                                            <img src="https://via.placeholder.com/800x400?text=Image+2"
-                                                                class="d-block w-100" alt="Image 2">
-                                                        </div>
-                                                        <div class="carousel-item">
-                                                            <img src="https://via.placeholder.com/800x400?text=Image+3"
-                                                                class="d-block w-100" alt="Image 3">
-                                                        </div>
-                                                    </div>
-                                                    <!-- Điều khiển (Previous và Next) -->
-                                                    <button class="carousel-control-prev" type="button"
-                                                        data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                                                        <span class="carousel-control-prev-icon"
-                                                            aria-hidden="true"></span>
-                                                        <span class="visually-hidden">Previous</span>
-                                                    </button>
-                                                    <button class="carousel-control-next" type="button"
-                                                        data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                                                        <span class="carousel-control-next-icon"
-                                                            aria-hidden="true"></span>
-                                                        <span class="visually-hidden">Next</span>
-                                                    </button>
+                            <!-- Khung chứa ảnh lớn -->
+                            <div class="mb-4">
+                                <img id="mainImage"
+                                    src="../../assets/images/products/featured_products/dan-piano-kawai-k300-mau-den-sang-trong.jpg"
+                                    alt="Ảnh lớn" class="main-img">
+                            </div>
+
+                            <!-- Khung chứa ảnh nhỏ -->
+                            <div class="thumbnail-container">
+                              
+                                            <img src="../../assets/images/products/featured_products/casio-cdp-s160-bk.jpg"
+                                                alt="Ảnh nhỏ 1" class="thumb-img"
+                                                data-large="../../assets/images/products/featured_products/casio-cdp-s160-bk.jpg">
+                                            <img src="../../assets/images/products/featured_products/dan-piano-kawai-k300-mau-den-sang-trong.jpg"
+                                                alt="Ảnh nhỏ 2" class="thumb-img"
+                                                data-large="../../assets/images/products/featured_products/dan-piano-kawai-k300-mau-den-sang-trong.jpg">
+                                            <img src="../../assets/images/products/featured_products/dan-piano-kawai-k300-mau-den-sang-trong.jpg"
+                                                alt="Ảnh nhỏ 3" class="thumb-img"
+                                                data-large="../../assets/images/products/featured_products/casio-cdp-s160-bk.jpg">
+                                            <img src="../../assets/images/products/featured_products/dan-piano-kawai-k300-mau-den-sang-trong.jpg"
+                                                alt="Ảnh nhỏ 4" class="thumb-img"
+                                                data-large="https://via.placeholder.com/800x400/ffff00/ffffff?text=Ảnh+4">
+                                                    
+                                        </span>
+                                    </a>
+                                    <!-- Modal chứa Slideshow -->
+                                    <div class="modal fade" id="slideshowModal" tabindex="-1"
+                                        aria-labelledby="slideshowModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog modal-lg">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title" id="slideshowModalLabel">Slideshow</h5>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                        aria-label="Close"></button>
                                                 </div>
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary"
-                                                    data-bs-dismiss="modal">Đóng</button>
+                                                <div class="modal-body">
+                                                    <!-- Slideshow (Carousel) -->
+                                                    <div id="carouselExampleControls" class="carousel slide"
+                                                        data-bs-ride="carousel" data-bs-interval="2000">
+                                                        <div class="carousel-inner">
+                                                            <div class="carousel-item active">
+                                                                <img src="https://via.placeholder.com/800x400?text=Image+1"
+                                                                    class="d-block w-100" alt="Image 1">
+                                                            </div>
+                                                            <div class="carousel-item">
+                                                                <img src="https://via.placeholder.com/800x400?text=Image+2"
+                                                                    class="d-block w-100" alt="Image 2">
+                                                            </div>
+                                                            <div class="carousel-item">
+                                                                <img src="https://via.placeholder.com/800x400?text=Image+3"
+                                                                    class="d-block w-100" alt="Image 3">
+                                                            </div>
+                                                        </div>
+                                                        <!-- Điều khiển (Previous và Next) -->
+                                                        <button class="carousel-control-prev" type="button"
+                                                            data-bs-target="#carouselExampleControls"
+                                                            data-bs-slide="prev">
+                                                            <span class="carousel-control-prev-icon"
+                                                                aria-hidden="true"></span>
+                                                            <span class="visually-hidden">Previous</span>
+                                                        </button>
+                                                        <button class="carousel-control-next" type="button"
+                                                            data-bs-target="#carouselExampleControls"
+                                                            data-bs-slide="next">
+                                                            <span class="carousel-control-next-icon"
+                                                                aria-hidden="true"></span>
+                                                            <span class="visually-hidden">Next</span>
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary"
+                                                        data-bs-dismiss="modal">Đóng</button>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                </div>
 
-                            </a>
-                        </ul>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -356,8 +371,8 @@
                     <div class="mb-3">
                         <label for="colorSelect" class="form-label">Màu sắc:</label>
                         <div>
-                            <span class="color-swatch bg-black me-2"></span>
-                            <span class="color-swatch bg-brown me-2"></span>
+                            <span class="color-swatch bg-black me-2" data-image="../../assets/images/products/featured_products/dan-piano-kawai-k300-mau-den-sang-trong.jpg"></span>
+                            <span class="color-swatch bg-brown me-2" data-image="../../assets/images/products/featured_products/casio-cdp-s160-bk.jpg"></span>
                             <span class="color-swatch bg-white"></span>
                         </div>
                     </div>
@@ -511,7 +526,29 @@
                 });
             });
         });
+        const thumbnails = document.querySelectorAll('.thumb-img');
+        const mainImage = document.getElementById('mainImage');
 
+        thumbnails.forEach(thumb => {
+            thumb.addEventListener('mouseenter', function () {
+                const largeImageSrc = this.getAttribute('data-large');
+                mainImage.src = largeImageSrc;
+            });
+        });
+
+        document.addEventListener('DOMContentLoaded', function () {
+    const colorSwatches = document.querySelectorAll('.color-swatch');
+    const mainImage = document.getElementById('mainImage');
+
+    colorSwatches.forEach(swatch => {
+        swatch.addEventListener('click', function () {
+            // Lấy đường dẫn ảnh từ thuộc tính data-image của màu sắc được chọn
+            const newImageSrc = this.getAttribute('data-image');
+            // Cập nhật ảnh chính với đường dẫn mới
+            mainImage.src = newImageSrc;
+        });
+    });
+});
     </script>
 </body>
 
