--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -25,9 +25,15 @@
         </div>
         <div class="divider">hoặc</div>
         <form>
-            <input type="text" class="form-control" id="user-number" placeholder="Nhập số điện thoại">
+            <div class="field">
+                <input type="text" class="form-control" id="user-number" placeholder="Nhập số điện thoại">
+                <label for="user-number">Số điện thoại</label>
+            </div>
 
-            <input type="password" class="form-control" id="user-password" placeholder="Nhập mật khẩu">
+            <div class="field">
+                <input type="password" class="form-control" id="user-password" placeholder="Nhập mật khẩu">
+                <label for="user-password">Mật khẩu</label>
+            </div>
 
             <div style="text-align: right; margin-bottom: 15px;">
                 <a href="forgot-password.html" class="forgot-password">Quên mật khẩu?</a>
