--- a/pages/login/register.html
+++ b/pages/login/register.html
@@ -25,12 +25,30 @@
         </div>
         <div class="divider">hoặc</div>
         <form>
-            <input type="text" class="form-control" placeholder="Nhập họ và tên">
-            <input type="password" class="form-control" placeholder="Nhập số điện thoại">
-            <input type="password" class="form-control" placeholder="Nhập email (không bắt buộc)">
-            <input type="password" class="form-control" placeholder="Ngày sinh">
-            <input type="password" class="form-control" placeholder="Nhập mật khẩu">
-            <input type="password" class="form-control" placeholder="Nhập lại mật khẩu">
+            <div class="field">
+                <input type="text" class="form-control" id="user-name" placeholder="Nhập họ và tên">
+                <label for="user-name">Họ và tên</label>
+            </div>
+            <div class="field">
+                <input type="text" class="form-control" id="user-number" placeholder="Nhập số điện thoại">
+                <label for="user-number">Số điện thoại</label>
+            </div>
+            <div class="field">
+                <input type="text" class="form-control" id="user-mail" placeholder="Nhập email (không bắt buộc)">
+                <label for="user-mail">Số điện thoại</label>
+            </div>
+            <div class="field">
+                <input type="text" class="form-control" id="user-birthday" placeholder="Ngày sinh">
+                <label for="user-birthday">Ngày sinh</label>
+            </div>
+            <div class="field">
+                <input type="password" class="form-control" id="user-password" placeholder="Nhập mật khẩu">
+                <label for="user-password">Mật khẩu</label>
+            </div>
+            <div class="field">
+                <input type="password" class="form-control" id="user-confirm-password" placeholder="Nhập lại mật khẩu">
+                <label for="user-confirm-password">Nhập lại mật khẩu</label>
+            </div>
 
             <button type="submit" class="btn-login" id="register-btn">Đăng ký</button>
         </form>
