--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -5,45 +5,257 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
 
-
-<!--    <script src="../../assets/libraries/bootstrap-5.3.3-dist/js/bootstrap.js"></script>-->
-<!--    <link rel="stylesheet" href="../../assets/libraries/bootstrap-5.3.3-dist/css/bootstrap.css">-->
+    <link rel="icon" href="../../assets/images/logo.png" type="image/png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../assets/libraries/bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../assets/css/custom.css">
     <link rel="stylesheet" href="../../assets/css/login.css">
 </head>
 <body>
-    <div class="login-container">
-        <h3>Đăng nhập với</h3>
-        <div class="social-buttons">
-            <button class="btn-social">
-                <img src="../../assets/images/logo/google-logo.png" alt="Google" style="width: 20px; height: 20px;">
-                &nbsp;Google
+<header>
+    <!-- Banner Image -->
+    <img src="/assets/images/banners/banner_header.png" alt="Tháng Tri Ân Săn Sale"
+         class="img-fluid w-100">
+    <!-- Top Info -->
+
+</header>
+<section>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+        <div class="container">
+            <!-- Logo -->
+            <a class="navbar-brand" href="#">
+                <img src="/assets/images/logo.png" alt="Logo" style="height: 60px;width: auto">
+            </a>
+
+            <!-- Navbar toggler cho thiết bị nhỏ -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
-            <button class="btn-social">
-                <img src="../../assets/images/logo/zalo-logo.png" alt="Zalo" style="width: 20px; height: 20px;">
-                &nbsp;Zalo
-            </button>
+
+            <!-- Các liên kết và thanh tìm kiếm -->
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <!-- Links ở giữa -->
+                <div class="navbar-nav mx-auto fw-bold">
+                    <a class="nav-link" href="#home">TRANG CHỦ</a>
+                    <a class="nav-link" href="pages/about.html">GIỚI THIỆU</a>
+
+                    <!-- Dropdown cho SẢN PHẨM -->
+                    <div class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
+                            SẢN PHẨM
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li class="dropdown-submenu">
+                                <a class="dropdown-item dropdown-toggle" href="#">Trống</a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Trống điện tử</a></li>
+                                    <li><a class="dropdown-item" href="#">Trống cơ</a></li>
+                                </ul>
+                            </li>
+                            <li class="dropdown-submenu">
+                                <a class="dropdown-item dropdown-toggle" href="#">Phụ kiện</a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Giá đỡ trống</a></li>
+                                    <li><a class="dropdown-item" href="#">Gậy trống</a></li>
+                                    <li><a class="dropdown-item" href="#">Túi đựng trống</a></li>
+                                </ul>
+                            </li>
+                            <li><a class="dropdown-item" href="#">Âm thanh</a></li>
+                            <li><a class="dropdown-item" href="#">Dụng cụ tập luyện</a></li>
+                        </ul>
+                    </div>
+
+                    <a class="nav-link" href="#">TIN TỨC</a>
+                    <a class="nav-link" href="#">LIÊN HỆ</a>
+                    <a class="nav-link" href="#">CHI NHÁNH</a>
+                </div>
+
+                <!-- Thanh tìm kiếm trên thiết bị lớn -->
+                <form class="d-flex mt-3 mt-lg-0 me-3">
+                    <input class="form-control me-2" type="search" placeholder="Tìm kiếm" aria-label="Search">
+                    <button class="btn btn-dark" type="submit">Tìm</button>
+                </form>
+
+                <!-- Icon Đăng nhập và Giỏ hàng -->
+                <div class="d-flex align-items-center ms-auto order-lg-2">
+                    <!-- ms-auto để đưa sang phải trên màn hình lớn -->
+                    <!-- Giỏ hàng -->
+                    <a href="#" class="btn btn-light me-3 position-relative">
+                        <i class="bi bi-cart-fill"></i>
+                        <!-- Badge hiển thị số lượng sản phẩm trong giỏ hàng -->
+                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                    3 <!-- số lượng sản phẩm -->
+                    </span>
+                    </a>
+
+                    <!-- Đăng nhập -->
+                    <div class="dropdown">
+                        <button class="btn btn-light dropdown-toggle" type="button" id="accountDropdown"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-person-circle"></i>
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="accountDropdown">
+                            <li><a class="dropdown-item" href="#">Đăng nhập</a></li>
+                            <li><a class="dropdown-item" href="#">Đăng ký</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Tài khoản của tôi</a></li>
+                            <li><a class="dropdown-item" href="#">Đơn hàng</a></li>
+                            <li><a class="dropdown-item" href="#">Đăng xuất</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="divider">hoặc</div>
-        <form>
-            <div class="field">
-                <input type="text" class="form-control" id="user-number" placeholder="Nhập số điện thoại">
-                <label for="user-number">Số điện thoại</label>
-            </div>
+    </nav>
+</section>
 
-            <div class="field">
-                <input type="password" class="form-control" id="user-password" placeholder="Nhập mật khẩu">
-                <label for="user-password">Mật khẩu</label>
-            </div>
+<div class="login-container">
+    <h3>Đăng nhập với</h3>
+    <div class="social-buttons">
+        <button class="btn-social">
+            <img src="../../assets/images/logo/google-logo.png" alt="Google" style="width: 20px; height: 20px;">
+            &nbsp;Google
+        </button>
+        <button class="btn-social">
+            <img src="../../assets/images/logo/zalo-logo.png" alt="Zalo" style="width: 20px; height: 20px;">
+            &nbsp;Zalo
+        </button>
+    </div>
+    <div class="divider">hoặc</div>
+    <form>
+        <div class="field">
+            <input type="text" id="user-number" placeholder="Nhập số điện thoại">
+            <label for="user-number">Số điện thoại</label>
+        </div>
 
-            <div style="text-align: right; margin-bottom: 15px;">
-                <a href="forgot-password.html" class="forgot-password">Quên mật khẩu?</a>
+        <div class="field">
+            <input type="password" id="user-password" placeholder="Nhập mật khẩu">
+            <label for="user-password">Mật khẩu</label>
+        </div>
+
+        <div style="text-align: right; margin-bottom: 15px;">
+            <a href="forgot-password.html" class="forgot-password">Quên mật khẩu?</a>
+        </div>
+        <button type="submit" class="btn-login" id="login-btn">Đăng nhập</button>
+    </form>
+    <div class="footer-links">
+        <p>Ban chưa có tài khoản? <a href="register.html" class="text-link">Đăng ký ngay</a></p>
+    </div>
+</div>
+
+<footer>
+    <!--Contact-->
+    <div class="bg-secondary py-5">
+        <div class="container text-black">
+            <div class="row justify-content-between align-items-center">
+                <!-- Phần bên trái: Thông tin liên hệ -->
+                <div class="col-12 col-md-6 mb-4 mb-md-0">
+                    <h4>LIÊN HỆ</h4>
+                    <p>Chúng tôi sẽ giúp bạn tìm đúng giải pháp cho đam mê của bạn.</p>
+                    <button class="btn btn-primary text-black">HOTLINE</button>
+                </div>
+
+                <!-- Phần bên phải: Form gửi email -->
+                <div class="col-12 col-md-6">
+                    <form>
+                        <div class="row">
+                            <div class="col-12 col-md-8 mb-3">
+                                <label for="contact-email" class="form-label">Địa chỉ email</label>
+                                <input type="email" class="form-control" id="contact-email"
+                                       placeholder="Nhập email của bạn"
+                                       required>
+                                <button type="submit" class="btn btn-primary w-100 w-md-25 mt-2 text-black">Gửi Email
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
-            <button type="submit" class="btn-login" id="login-btn">Đăng nhập</button>
-        </form>
-        <div class="footer-links">
-            <p>Ban chưa có tài khoản? <a href="register.html" class="text-link">Đăng ký ngay</a></p>
         </div>
     </div>
+
+    <div class="bg-dark text-white pt-4 pb-4">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-12 col-md-3 mb-4 mb-md-0">
+                    <h5 class="text-uppercase">Thông tin Drum Store</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#" class="text-white">Giới thiệu công ty</a></li>
+                        <li><a href="#" class="text-white">Hệ thống showroom, đại lý</a></li>
+                        <li><a href="#" class="text-white">Liên Hệ / Góp Ý</a></li>
+                        <li><a href="#" class="text-white">Mua trả góp</a></li>
+                        <li><a href="#" class="text-white">Chương trình Khách hàng thân thiết</a></li>
+                        <li><a href="#" class="text-white">Điều khoản sử dụng website</a></li>
+                        <li><a href="#" class="text-white">Tuyển dụng</a></li>
+                    </ul>
+                </div>
+
+
+                <div class="col-12 col-md-3 mb-4 mb-md-0">
+                    <h5 class="text-uppercase">Hướng dẫn chung</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#" class="text-white">Giao hàng - Đổi trả</a></li>
+                        <li><a href="#" class="text-white">Hướng dẫn mua hàng</a></li>
+                        <li><a href="#" class="text-white">Thanh toán và bảo mật</a></li>
+                        <li><a href="#" class="text-white">Chính sách bảo hành</a></li>
+                        <li><a href="#" class="text-white">Bảo trì đàn piano</a></li>
+                        <li><a href="#" class="text-white">Kích hoạt bảo hành</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-12 col-md-3 mb-4 mb-md-0">
+                    <h5 class="text-uppercase">Hỗ trợ khách hàng</h5>
+                    <ul class="list-unstyled">
+                        <li><strong>Gọi mua hàng: </strong><a href="tel:123-456-7890" class="text-white">123-456-7890
+                            (Miễn
+                            phí)</a></li>
+                        <li><strong>Khiếu nại, Bảo hành: </strong><a href="tel:123-456-7890" class="text-white">123-456-7890</a>
+                        </li>
+                        <li><strong>Thời gian phục vụ: </strong>8h-22h</li>
+                        <li><strong>Email: </strong><a href="mailto:drumstore@gmail.com" class="text-white">drumstore@gmail.com</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- Cột 4: Social, Phương thức thanh toán, Chứng nhận -->
+                <div class="col-12 col-md-3">
+                    <h5>MẠNG XÃ HỘI</h5>
+                    <ul class="list-unstyled d-flex gap-3">
+                        <li><a href="#" class="text-white" aria-label="Facebook"><i class="bi bi-facebook"></i></a></li>
+                        <li><a href="#" class="text-white" aria-label="TikTok"><i class="bi bi-tiktok"></i></a></li>
+                        <li><a href="#" class="text-white" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+                        </li>
+                        <li><a href="#" class="text-white" aria-label="YouTube"><i class="bi bi-youtube"></i></a></li>
+                    </ul>
+
+                    <h5 class="text-uppercase mt-4">Phương thức thanh toán</h5>
+                    <ul class="list-unstyled">
+                        <li><img src="/assets/images/payments/visa.png" alt="Phương thức thanh toán" class="img-fluid"/>
+                        </li>
+                    </ul>
+
+                    <h5 class="text-uppercase mt-4">Chứng nhận</h5>
+                    <ul class="list-unstyled">
+                        <li><img src="/assets/images/dcma/chungnhan.png" alt="Chứng nhận" class="img-fluid"/></li>
+                        <li><img src="/assets/images/dcma/dmca.png" alt="Chứng nhận" class="img-fluid"/></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="row mt-4">
+                <div class="col-12 text-center">
+                    <p>&copy; 2024 Công ty Cổ Phần TM-DV-SX Drum Store. Tất cả quyền lợi được bảo lưu.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 
 </html>
